--- a/index.html
+++ b/index.html
@@ -105,21 +105,10 @@
             to { opacity: 1; transform: translateY(0); }
         }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "jspdf": "https://esm.sh/jspdf@^2.5.2"
-  }
-}
-</script>
 <link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <div id="root"></div>
-<script type="module" src="/index.tsx"></script>
+<script type="module" src="src/index.tsx"></script>
 </body>
 </html>
